--- a/thesis.tex
+++ b/thesis.tex
@@ -11,7 +11,7 @@
 % Use this command to output a single chapter
 %\includeonly{chapter_events,chapter_geomorph}
 %\includeonly{chapter_floodinundation}
-%\includeonly{chapter_metdatamodels}
+\includeonly{chapter_metdatamodels}
 
 
 \usepackage{rotating}
@@ -24,6 +24,8 @@
 \usepackage{hyperref}
 \hypersetup{colorlinks=true,allcolors={blue!50!black}}
 \usepackage{hypcap}
+\usepackage{gensymb}  % degree symbol
+
 
 %\usepackage[]{hyperref}
 %\hypersetup{
