--- a/chapter_metdatamodels.tex
+++ b/chapter_metdatamodels.tex
@@ -62,9 +62,10 @@ The reflectivity returns measured at any indivdual radar site are a combination 
 
 \end{enumerate}
 
+\section{Rainfall radar in Britain and Ireland}
 
+Britain and Ireland are covered by a network of C-band (5 cm wavelength) radar sites. 15 of these are located in the UK and maintained by the UK Met Office, 2 in Ireland are maintained by Met Eireann. A further radar is located on the island of Jersey, maintained by Jersey Met. Combined, these sites give coverage of the whole of Britain, Ireland and surrounding waters. The scanning patttern of the radar network returns radar reflectivity data at four elevations every five minutes, at a resolution of 600m by 1 \degree, extending to 250 km of range (Harrison 2012). 
 
-\section{Rainfall radar in the UK}
 
 \section{UK 1km Radar Composite Product}
 \label{NIMROD}
