--- a/literature.bib
+++ b/literature.bib
@@ -3570,4 +3570,406 @@ year = {2002}
   year={1984},
   publisher={Elsevier}
 }
-
+% RADAR FLOODING CHAPTERS
+@article{austin1974use,
+  title={The use of radar in urban hydrology},
+  author={Austin, GL and Austin, LB},
+  journal={Journal of Hydrology},
+  volume={22},
+  number={1-2},
+  pages={131--142},
+  year={1974},
+  publisher={Elsevier}
+}
+@article{bell1998grid,
+  title={A grid-based distributed flood forecasting model for use with weather radar data: Part 1. Formulation},
+  author={Bell, VA and Moore, RJ},
+  journal={Hydrology and Earth System Sciences Discussions},
+  volume={2},
+  number={2/3},
+  pages={265--281},
+  year={1998}
+}
+@article{berne2013radar,
+  title={Radar for hydrology: Unfulfilled promise or unrecognized potential?},
+  author={Berne, Alexis and Krajewski, Witold F},
+  journal={Advances in Water Resources},
+  volume={51},
+  pages={357--366},
+  year={2013},
+  publisher={Elsevier}
+}
+@article{berne2004temporal,
+  title={Temporal and spatial resolution of rainfall measurements required for urban hydrology},
+  author={Berne, Alexis and Delrieu, Guy and Creutin, Jean-Dominique and Obled, Charles},
+  journal={Journal of Hydrology},
+  volume={299},
+  number={3},
+  pages={166--179},
+  year={2004},
+  publisher={Elsevier}
+}
+@article{borga2000use,
+  title={On the use of real-time radar rainfall estimates for flood prediction in mountainous basins},
+  author={Borga, Marco and Anagnostou, Emmanouil N and Frank, Enrico},
+  journal={Journal of Geophysical Research: Atmospheres},
+  volume={105},
+  number={D2},
+  pages={2269--2280},
+  year={2000},
+  publisher={Wiley Online Library}
+}
+@article{bruni2015sensitivity,
+  title={On the sensitivity of urban hydrodynamic modelling to rainfall spatial and temporal resolution},
+  author={Bruni, Guendalina and Reinoso, R and van de Giesen, NC and Clemens, FHLR and ten Veldhuis, JAE},
+  journal={Hydrology and Earth System Sciences},
+  volume={19},
+  number={2},
+  pages={691},
+  year={2015},
+  publisher={Copernicus GmbH}
+}
+@book{collier1989applications,
+  title={Applications of weather radar systems},
+  author={Collier, Christopher G},
+  year={1989},
+  publisher={Wiley}
+}
+@article{dixon2009impact,
+  title={Impact of data assimilation on forecasting convection over the United Kingdom using a high-resolution version of the Met Office Unified Model},
+  author={Dixon, Mark and Li, Zhihong and Lean, Humphrey and Roberts, Nigel and Ballard, Sue},
+  journal={Monthly Weather Review},
+  volume={137},
+  number={5},
+  pages={1562--1584},
+  year={2009}
+}
+@article{einfalt2004towards,
+  title={Towards a roadmap for use of radar rainfall data in urban drainage},
+  author={Einfalt, Thomas and Arnbjerg-Nielsen, Karsten and Golz, Claudia and Jensen, Niels-Einar and Quirmbach, Markus and Vaes, Guido and Vieux, Baxter},
+  journal={Journal of Hydrology},
+  volume={299},
+  number={3},
+  pages={186--202},
+  year={2004},
+  publisher={Elsevier}
+}
+@article{fabry1994high,
+  title={High resolution rainfall measurements by radar for very small basins: the sampling problem reexamined},
+  author={Fabry, Frederic and Bellon, Aldo and Duncan, Mike R and Austin, Geoffrey L},
+  journal={Journal of Hydrology},
+  volume={161},
+  number={1-4},
+  pages={415--428},
+  year={1994},
+  publisher={Elsevier}
+}
+@article{gires2014influence,
+  title={Influence of small scale rainfall variability on standard comparison tools between radar and rain gauge data},
+  author={Gires, Auguste and Tchiguirinskaia, Ioulia and Schertzer, Daniel and Schellart, Alma and Berne, Alexis and Lovejoy, Shaun},
+  journal={Atmospheric Research},
+  volume={138},
+  pages={125--138},
+  year={2014},
+  publisher={Elsevier}
+}
+@article{kramer2005runoff,
+  title={Runoff modelling using radar data and flow measurements in a stochastic state space approach},
+  author={Kr{\"a}mer, S and Grum, M and Verworn, H-R and Redder, A},
+  journal={Water science and technology},
+  volume={52},
+  number={5},
+  pages={1--8},
+  year={2005},
+  publisher={IWA Publishing}
+}
+@article{lobligeois2014does,
+  title={When does higher spatial resolution rainfall information improve streamflow simulation? An evaluation using 3620 flood events},
+  author={Lobligeois, F and Andr{\'e}assian, V and Perrin, C and Tabary, P and Loumagne, C},
+  journal={Hydrology and Earth System Sciences},
+  volume={18},
+  number={2},
+  pages={575},
+  year={2014},
+  publisher={Copernicus GmbH}
+}
+@Article{peleg2016apartitioning,
+AUTHOR = {Peleg, N. and Blumensaat, F. and Molnar, P. and Fatichi, S. and Burlando, P.},
+TITLE = {Partitioning spatial and temporal rainfall variability in urban
+drainage modelling},
+JOURNAL = {Hydrology and Earth System Sciences Discussions},
+VOLUME = {2016},
+YEAR = {2016},
+PAGES = {1--20},
+URL = {http://www.hydrol-earth-syst-sci-discuss.net/hess-2016-530/},
+DOI = {10.5194/hess-2016-530}
+}
+@article{peleg2016bspatial,
+  title={Spatial variability of extreme rainfall at radar subpixel scale},
+  author={Peleg, Nadav and Marra, Francesco and Fatichi, Simone and Paschalis, Athanasios and Molnar, Peter and Burlando, Paolo},
+  journal={Journal of Hydrology},
+  year={2016},
+  publisher={Elsevier}
+}
+@article{rinehart1978three,
+  title={Three-dimensional storm motion detection by conventional weather radar},
+  author={Rinehart, RE and Garvey, ET},
+  journal={Nature},
+  volume={273},
+  number={5660},
+  pages={287--289},
+  year={1978},
+  publisher={Nature Publishing Group}
+}
+@article{thorndahl2014analyses,
+  title={Analyses of the temporal and spatial structures of heavy rainfall from a catalog of high-resolution radar rainfall fields},
+  author={Thorndahl, S{\o}ren and Smith, James A and Baeck, Mary Lynn and Krajewski, Witold F},
+  journal={Atmospheric Research},
+  volume={144},
+  pages={111--125},
+  year={2014},
+  publisher={Elsevier}
+}
+@book{bloschl2013runoff,
+  title={Runoff prediction in ungauged basins: synthesis across processes, places and scales},
+  author={Bl{\"o}schl, G{\"u}nter},
+  year={2013},
+  publisher={Cambridge University Press}
+}
+@article{sivapalan2003prediction,
+  title={Prediction in ungauged basins: a grand challenge for theoretical hydrology},
+  author={Sivapalan, Murugesu},
+  journal={Hydrological Processes},
+  volume={17},
+  number={15},
+  pages={3163--3170},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+@book{shaw2010hydrology,
+  title={Hydrology in practice},
+  author={Shaw, Elizabeth M and Beven, Keith J and Chappell, Nick A and Lamb, Rob},
+  year={2010},
+  publisher={CRC Press}
+}
+@article{strahler1957quantitative,
+  title={Quantitative analysis of watershed geomorphology},
+  author={Strahler, Arthur N},
+  journal={Eos, Transactions American Geophysical Union},
+  volume={38},
+  number={6},
+  pages={913--920},
+  year={1957},
+  publisher={Wiley Online Library}
+}
+@article{tarboton1991extraction,
+  title={On the extraction of channel networks from digital elevation data},
+  author={Tarboton, David G and Bras, Rafael L and Rodriguez-Iturbe, Ignacio},
+  journal={Hydrological processes},
+  volume={5},
+  number={1},
+  pages={81--100},
+  year={1991},
+  publisher={Wiley Online Library}
+}
+@article{ocallaghan1984extraction,
+  title={The extraction of drainage networks from digital elevation data},
+  author={{O'Callaghan}, John F and Mark, David M},
+  journal={Computer vision, graphics, and image processing},
+  volume={28},
+  number={3},
+  pages={323--344},
+  year={1984},
+  publisher={Elsevier}
+}
+@article{welsh2009testing,
+  title={Testing a cellular modelling approach to simulating late-Holocene sediment and water transfer from catchment to lake in the French Alps since 1826},
+  author={Welsh, KE and Dearing, JA and Chiverrell, RC and Coulthard, TJ},
+  journal={The Holocene},
+  volume={19},
+  number={5},
+  pages={785--798},
+  year={2009},
+  publisher={Sage Publications Sage UK: London, England}
+}
+@article{beven1993prophecy,
+  title={Prophecy, reality and uncertainty in distributed hydrological modelling},
+  author={Beven, Keith},
+  journal={Advances in water resources},
+  volume={16},
+  number={1},
+  pages={41--51},
+  year={1993},
+  publisher={Elsevier}
+}
+@inproceedings{beven1996equifinallity,
+  title={Equifinality and Uncertainty in Geomorphological Modelling},
+  author={Beven, Keith},
+  booktitle={The Scientific Nature of Geomorphology: Proceedings of the 27th Binghamton Symposium in Geomorphology, Held 27-29 September, 1996},
+  volume={27},
+  pages={289},
+  year={1996},
+  organization={John Wiley \& Sons}
+}
+@article{ebel2006physics,
+  title={Physics-based hydrologic-response simulation: Seeing through the fog of equifinality},
+  author={Ebel, Brian A and Loague, Keith},
+  journal={Hydrological Processes},
+  volume={20},
+  number={13},
+  pages={2887--2900},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+@article{savenije2001equifinality,
+  title={Equifinality, a blessing in disguise?},
+  author={Savenije, Hubert HG},
+  journal={Hydrological processes},
+  volume={15},
+  number={14},
+  pages={2835--2838},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+@article{beven2001equifinality,
+  title={Equifinality, data assimilation, and uncertainty estimation in mechanistic modelling of complex environmental systems using the GLUE methodology},
+  author={Beven, Keith and Freer, Jim},
+  journal={Journal of hydrology},
+  volume={249},
+  number={1},
+  pages={11--29},
+  year={2001},
+  publisher={Elsevier}
+}
+@book{sear2010guidebook,
+  title={Guidebook of applied fluvial geomorphology},
+  author={Sear, David A and Newson, Malcolm D and Thorne, Colin R},
+  year={2010},
+  publisher={Thomas Telford Ltd}
+}
+@article{stover2001channel,
+  title={Channel change and flooding, Skokomish River, Washington},
+  author={Stover, SC and Montgomery, DR},
+  journal={Journal of Hydrology},
+  volume={243},
+  number={3},
+  pages={272--286},
+  year={2001},
+  publisher={Elsevier}
+}
+@article{werner2005spatially,
+  title={Spatially distributed observations in constraining inundation modelling uncertainties},
+  author={Werner, Micha and Blazkova, Sarka and Petr, Jiri},
+  journal={Hydrological Processes},
+  volume={19},
+  number={16},
+  pages={3081--3096},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+@article{bates2000simple,
+  title={A simple raster-based model for flood inundation simulation},
+  author={Bates, Paul D and De Roo, APJ},
+  journal={Journal of hydrology},
+  volume={236},
+  number={1},
+  pages={54--77},
+  year={2000},
+  publisher={Elsevier}
+}
+@article{galland1991telemac,
+  title={TELEMAC: A new numerical model for solving shallow water equations},
+  author={Galland, Jean-Charles and Goutal, Nicole and Hervouet, Jean-Michel},
+  journal={Advances in Water Resources},
+  volume={14},
+  number={3},
+  pages={138--148},
+  year={1991},
+  publisher={Elsevier}
+}
+@article{roberts2009use,
+  title={Use of high-resolution NWP rainfall and river flow forecasts for advance warning of the Carlisle flood, north-west England},
+  author={Roberts, Nigel M and Cole, Steven J and Forbes, Richard M and Moore, Robert J and Boswell, Daniel},
+  journal={Meteorological Applications},
+  volume={16},
+  number={1},
+  pages={23--34},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+@article{einfalt2004towards,
+  title={Towards a roadmap for use of radar rainfall data in urban drainage},
+  author={Einfalt, Thomas and Arnbjerg-Nielsen, Karsten and Golz, Claudia and Jensen, Niels-Einar and Quirmbach, Markus and Vaes, Guido and Vieux, Baxter},
+  journal={Journal of Hydrology},
+  volume={299},
+  number={3},
+  pages={186--202},
+  year={2004},
+  publisher={Elsevier}
+}
+@article{giannoni2003hydrologic,
+  title={Hydrologic modeling of extreme floods using radar rainfall estimates},
+  author={Giannoni, Francesca and Smith, James A and Zhang, Yu and Roth, Giorgio},
+  journal={Advances in Water Resources},
+  volume={26},
+  number={2},
+  pages={195--203},
+  year={2003},
+  publisher={Elsevier}
+}
+@article{borga2002accuracy,
+  title={Accuracy of radar rainfall estimates for streamflow simulation},
+  author={Borga, Marco},
+  journal={Journal of Hydrology},
+  volume={267},
+  number={1},
+  pages={26--39},
+  year={2002},
+  publisher={Elsevier}
+}
+@article{knebl2005regional,
+  title={Regional scale flood modeling using NEXRAD rainfall, GIS, and HEC-HMS/RAS: a case study for the San Antonio River Basin Summer 2002 storm event},
+  author={Knebl, MR and Yang, Z-L and Hutchison, K and Maidment, DR},
+  journal={Journal of Environmental Management},
+  volume={75},
+  number={4},
+  pages={325--336},
+  year={2005},
+  publisher={Elsevier}
+}
+@article{borga2000use,
+  title={On the use of real-time radar rainfall estimates for flood prediction in mountainous basins},
+  author={Borga, Marco and Anagnostou, Emmanouil N and Frank, Enrico},
+  journal={Journal of Geophysical Research: Atmospheres},
+  volume={105},
+  number={D2},
+  pages={2269--2280},
+  year={2000},
+  publisher={Wiley Online Library}
+}
+@article{clubbinpress,
+  title={Geomorphometric delineation of floodplains and terraces from slope and channel relief thresholds},
+  author={Clubb, Fiona and Mudd, Simon and Milodowski, David and Valters, Declan and Slater, Louise and Hurst, Martin and Limaye, Ajay},
+  journal={Earth Surface Dynamics},
+  year={in press},
+  publisher={Copernicus}
+}
+@article{bell2000sensitivity,
+  title={The sensitivity of catchment runoff models to rainfall data at different spatial scales},
+  author={Bell, VA and Moore, RJ},
+  journal={Hydrology and Earth System Sciences Discussions},
+  volume={4},
+  number={4},
+  pages={653--667},
+  year={2000}
+}
+@article{cole2008hydrological,
+  title={Hydrological modelling using raingauge-and radar-based estimators of areal rainfall},
+  author={Cole, Steven J and Moore, Robert J},
+  journal={Journal of Hydrology},
+  volume={358},
+  number={3},
+  pages={159--181},
+  year={2008},
+  publisher={Elsevier}
+}
