--- a/appendices.tex
+++ b/appendices.tex
@@ -1,14 +1,61 @@
 
-\chapter{Code availability}
+\chapter{Software availability}
 
-\chapter{Key code and algorithms for the cellular automaton LEM}
+\chapter{Core code for the HAIL-CAESAR model}
 
-\chapter{Configuration of the WRF model for the simulation of the North York Moors storm}
+
+
+
+\lstdefinestyle{customcpp}{
+  belowcaptionskip=1\baselineskip,
+  breaklines=true,
+  %xleftmargin=\parindent,
+  language=C++,
+  showstringspaces=false,
+  basicstyle=\footnotesize\ttfamily,
+  keywordstyle=\bfseries\color{green!40!black},
+  commentstyle=\itshape\color{purple!40!black},
+  identifierstyle=\color{blue},
+  stringstyle=\color{orange},
+ }
+  
+\lstinputlisting[language=C++,style=customcpp]{Code/LSDCatchmentModel.cpp}
+
+\chapter{NIMROD-processing code}
+
+\lstdefinestyle{mypy}{
+  language=Python,
+  backgroundcolor=\color{white}, %%%%%%%
+  basicstyle=\ttm,
+  breaklines=true,
+  otherkeywords={self},            
+  keywordstyle=\ttb\color{deepblue},
+  emph={MyClass,__init__},          
+  emphstyle=\ttb\color{deepred},    
+  stringstyle=\color{deepgreen},
+  commentstyle=\color{red},  %%%%%%%%
+  frame=tb,                         
+  showstringspaces=false            
+}
+
+\section{NIMROD data conversion code}
+\lstinputlisting[language=Python,style=mypy]{Code/NIMROD_convert.py}
+
+\section{NIMROD rainfall timeseries creation code}
+\lstinputlisting[language=Python,style=mypy]{Code/NIMROD_timeseries.py}
+
+\section{Code for creating HAIL-CAESAR hydroindex file}
+\lstinputlisting[language=Python,style=mypy]{Code/create_hydroindex.py}
+
+
+\chapter{Swath profiling algorithm and code}
+
+%\chapter{Configuration of the WRF model for the simulation of the North York Moors storm}
 
 %\chapter{Modifications made to the Weather Research and Forecasting model (WRF)}
 
 %\chapter{A one-way coupling framework for the WRF-CHILD model}
 
-%\chapter{Cluster computing simulations: set-up, compilation, and scaling}
+\chapter{HPC computing simulations: set-up and compilation}
 
 %\chapter{Paper off-prints may also be attached with a traditional-format thesis}
